--- a/sps.html
+++ b/sps.html
@@ -38,7 +38,7 @@
           <br>
           <p class="text-secondary">From Zero to a high paid Software Engineer in 180 <br>days.</p>
 
-          <button type="button" onclick="location.href='.form.html'" class=" colbtn">Apply Now</button>
+          <button type="button" onclick="location.href='form.html'" class=" colbtn">Apply Now</button>
           <br>
           <br>
           <p class="text-secondary">(NB: Read all the FAQs carefully before you <br>
