small changes maded

--- a/sps.html
+++ b/sps.html
@@ -22,7 +22,7 @@
   <Section>
     <div class="container-fluid">
       <div class="row align-items-center">
-        <div class="col-lg-7" >
+        <div class="col-lg-7 col-12" >
           <div onclick="this.nextElementSibling.style.display='block'; this.style.display='none'; document.getElementById('video1').src+='?autoplay=1';">
             <img class="img-fluid" style="cursor: pointer;" src="https://spsonline.in/images/whats_sps.png" alt="" id="hyperisor">
 
@@ -32,7 +32,7 @@
 
           </div>
         </div>  
-        <div class="col-lg-5">
+        <div class="col-lg-5 col-12">
           <h1 class="text-dark"> <b> No Tuition Fee <br>Upfront,
             Pay Only When <br>You Earn.</b></h1>
           <br>
@@ -52,7 +52,7 @@
     <h1 class="text-center"><b>Features</b></h1>
     <div class="container-fluid p-5">
       <div class="row">
-        <div class="col-lg-4 aos-init aos-animate" data-aos="fade-up">
+        <div class="col-lg-4 col-12 aos-init aos-animate" data-aos="fade-up">
           <div class="card card-a" style="width:90%; height: 100%;">
             <div class="card-body">
               <span class="material-icons outlined p-3">
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-12">
           <div class="card card-a" style="width:90%;height: 100%;">
             <div class="card-body">
               <span class="material-icons round p-3">
@@ -78,7 +78,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-12">
           <div class="card card-a" style="width: 90%;height: 100%;">
             <div class="card-body ">
               <span class="material-icons outlined p-3">
@@ -100,15 +100,15 @@
   <section>
     <div class="container-fluid">
       <div class="row ">
-        <div class="col-lg-7 ">
+        <div class="col-lg-7 col-12">
           <div style="cursor: pointer;" onclick="this.nextElementSibling.style.display='block'; this.style.display='none'; document.getElementById('video2').src+='?autoplay=1';">
             <img class="img-fluid" src="https://spsonline.in/images/Howspsworks.png" id="img2" alt="">
           </div>
-          <div style="display: none;">
+          <div style="display: none; " class="container-fluid">
             <iframe id="video2" width="560" height="315" src="https://www.youtube.com/embed/ckub1RSlhic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-5 col-12">
           <h1 class="pt-5"><b>SPS in Brief?</b></h1>
           <br>
           <p class="text-secondary">School of Practical Studies (SPS) helps the young Indian generation who had
@@ -125,7 +125,7 @@
     </div>
   </section>
   <section>
-    <div class="container-fluid pl-5 pt-5">
+    <div class="container-fluid pl-5  pt-5">
       <h1 class="pl-5 p-3"><b>Life at SPS</b></h1>
       <center>
         <hr width="88%">
@@ -202,7 +202,7 @@
     <h1 class="pl-5"><b>What Domains You Can Choose</b></h1>
     <div class="container-fluid mt-5">
       <div class="row pt-2">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-12 col-md-6">
 
           <div class="card my-auto card-a aos-init aos-animate" data-aos="fade-up" h-75 style="width: 100%;height:100%">
             <div class="card-body">
@@ -213,7 +213,7 @@
 
 
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-12 col-md-6">
           <div class="card card-a my-auto" h-75 style="width: 100%;">
             <div class="card-body ">
               <h5 class="card-title">Mobile App Development</h5>
@@ -225,7 +225,7 @@
 
       </div>
       <div class="row pt-2">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-12 col-md-6">
 
           <div class="card card-a my-auto " h-75 style="width:100%;">
             <div class="card-body">
@@ -235,7 +235,7 @@
 
 
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-12 col-md-6">
           <div class="card card-a my-auto" h-100 style="width: 100%">
             <div class="card-body">
               <h5 class="card-title">Artificial Intelligence</h5>
@@ -246,7 +246,7 @@
 
       </div>
       <div class="row pt-2">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-12 col-md-6">
 
           <div class="card card-a my-auto" h-100 style="width: 100%;">
             <div class="card-body">
@@ -266,7 +266,7 @@
       </div>
 
       <div class="row pt-2">
-        <div class="col-lg-6 col-md-6 ">
+        <div class="col-lg-6 col-12 col-md-6 ">
 
           <div class="card card-a m-auto" h-75 style="width: 100%;height:100%">
             <div class="card-body">
@@ -276,7 +276,7 @@
 
 
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-12 col-md-6">
           <div class="card card-a my-auto" h-75 style="width: 100%;">
             <div class="card-body">
               <h5 class="card-title">
@@ -287,7 +287,7 @@
         </div>
       </div>
       <div class="row pt-2">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-12 col-md-6">
 
           <div class="card card-a my-auto" h-75 style="width: 100%;height:100%">
             <div class="card-body">
@@ -297,7 +297,7 @@
 
 
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-12 col-md-6">
           <div class="card card-a my-auto" h-75 style="width: 100%;">
             <div class="card-body">
               <h5 class="card-title">DevOps</h5>
@@ -315,7 +315,7 @@
     </center>
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 col-12">
           <div onclick="this.nextElementSibling.style.display='block'; this.style.display='none'; document.getElementById('video3').src+='?autoplay=1';">
           <img class="img-fluid" style="cursor: pointer;" src="https://spsonline.in/images/whocanjoinsps.png" alt="image_Sps">
         </div>
@@ -421,8 +421,8 @@
           <div onclick="this.nextElementSibling.style.display='block'; this.style.display='none'; document.getElementById('video4').src+='?autoplay=1';">
           <img class="img-fluid" style="cursor: pointer;" src="https://spsonline.in/images/howmuchdoesitcost.png" alt="Sps_image">
         </div>
-        <div style="display:none">
-          <iframe width="560" height="315" id="video4" src="https://www.youtube.com/embed/vhG3wKGp2mc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div style="display:none" class="container-fluid">
+          <iframe  width="560" height="315" id="video4" src="https://www.youtube.com/embed/vhG3wKGp2mc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </div>
       </div>
@@ -431,12 +431,12 @@
 
   <section class="ml-5">
     <h1 class="pl-4"><b>Convocation</b></h1>
-    <hr align="left" class="" width="20%">
+    <hr align="left" class="align-items-center" width="20%">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 ">
           <div onclick="this.nextElementSibling.style.display='block'; this.style.display='none'; document.getElementById('video5').src+='?autoplay=1';">
-          <img class="img-fluid" style="cursor: pointer;" src="https://spsonline.in/images/ConvocationCeremony.png" alt="">
+          <img class="img-fluid" style="cursor: pointer; align-items: center;" src="https://spsonline.in/images/ConvocationCeremony.png" alt="">
         </div>
         <div class="align-content-center" style="display: none;">
           <iframe width="900" id="video5" height="605" src="https://www.youtube.com/embed/m_hx0Ebg5Yo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -451,8 +451,8 @@
     <hr align="left" width="40%">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-6 p-5">
-          <div style="border:none ;overflow:auto; height:40%; width: 100%;">
+        <div class="col-lg-6 col-12 col-md-6 msg">
+          <div style="border:none ;overflow:auto; height:20rem; width: 100%;">
 
 
             <!-- '''''''''''''''''''''''''''''''''''''''''''''''''''''''''''' -->
@@ -460,7 +460,7 @@
 
 
 
-            <div class="container">
+            <div class="container ">
 
 
 
@@ -495,7 +495,8 @@
           </div>
 
         </div>
-        <div class="col-lg-6 ">
+        
+        <div class="col-lg-6 col-12 col-md-6">
           <span class="material-icons outlined">
             location_on
             </span>
