--- a/sps.html
+++ b/sps.html
@@ -532,10 +532,10 @@
     </span>
   </button>
     <hr>
-    <footer>
-      <div class="col-md-12">
+    <footer class="foot">
+      <div class="col-md-12 ">
 
-        <p class="text-center">Copyright ©Packapeer Academy Pvt Ltd 2021 </p>
+        <p  class="text-center copy-right">Copyright ©Packapeer Academy Pvt Ltd 2021 </p>
 
       </div>
     </footer>
