--- a/sps.html
+++ b/sps.html
@@ -104,8 +104,8 @@
           <div style="cursor: pointer;" onclick="this.nextElementSibling.style.display='block'; this.style.display='none'; document.getElementById('video2').src+='?autoplay=1';">
             <img class="img-fluid" src="https://spsonline.in/images/Howspsworks.png" id="img2" alt="">
           </div>
-          <div style="display: none; " class="container-fluid">
-            <iframe id="video2" width="560" height="315" src="https://www.youtube.com/embed/ckub1RSlhic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div style="display: none; " class="container-fluid mt-5 ">
+          <center>  <iframe id="video2" width="560" height="315" src="https://www.youtube.com/embed/ckub1RSlhic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
           </div>
         </div>
         <div class="col-lg-5 col-12">
@@ -320,7 +320,7 @@
           <img class="img-fluid" style="cursor: pointer;" src="https://spsonline.in/images/whocanjoinsps.png" alt="image_Sps">
         </div>
         <div style="display: none;">
-          <iframe width="800" height="315" src="https://www.youtube.com/embed/xkmM6h32lnM" title="YouTube video player" id="video3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/xkmM6h32lnM" title="YouTube video player" id="video3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
       </div>
@@ -438,8 +438,8 @@
           <div onclick="this.nextElementSibling.style.display='block'; this.style.display='none'; document.getElementById('video5').src+='?autoplay=1';">
           <img class="img-fluid" style="cursor: pointer; align-items: center;" src="https://spsonline.in/images/ConvocationCeremony.png" alt="">
         </div>
-        <div class="align-content-center" style="display: none;">
-          <iframe width="900" id="video5" height="605" src="https://www.youtube.com/embed/m_hx0Ebg5Yo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="align-content-center container-fluid" style="display: none; " >
+          <iframe width="560" id="video5" height="315" src="https://www.youtube.com/embed/m_hx0Ebg5Yo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         </div>
       </div>
@@ -460,7 +460,7 @@
 
 
 
-            <div class="container ">
+            <div class="container m-0">
 
 
 
@@ -496,7 +496,7 @@
 
         </div>
         
-        <div class="col-lg-6 col-12 col-md-6">
+        <div class="col-lg-6 col-12 col-md-6  ">
           <span class="material-icons outlined">
             location_on
             </span>
@@ -535,7 +535,7 @@
     <footer class="foot">
       <div class="col-md-12 ">
 
-        <p  class="text-center copy-right">Copyright ©Packapeer Academy Pvt Ltd 2021 </p>
+        <p  class="text-center copy-right text-muted">Copyright ©Packapeer Academy Pvt Ltd 2021 </p>
 
       </div>
     </footer>
